--- a/assets/index.html
+++ b/assets/index.html
@@ -12,5 +12,8 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+    <p>
+      <span id="hello-world"></span>
+    </p>
   </body>
 </html>
